(public) fix styles of components

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="set-12 txt-center">
-          <button type="button" mat-raised-button color="primary" (click)="linkMe('/documentos/' + document._id)">
+          <button type="button" mat-raised-button color="primary" (click)="linkMe('/documentos-publicos/' + document._id)">
             Visitar Documento
           </button>
         </div>
