--- a/src/app/public-documents/components/testimonials/testimonials.component.html
+++ b/src/app/public-documents/components/testimonials/testimonials.component.html
@@ -1,5 +1,5 @@
 <div class="testimonials">
-  <p class="title">Testimonios</p>
+  <p class="title-card">Testimonios</p>
 
   <!-- TESTIMONIALS LIST -->
   <div class="content">
