--- a/src/app/public-documents/selected-category/selected-category.component.html
+++ b/src/app/public-documents/selected-category/selected-category.component.html
@@ -61,40 +61,9 @@
           <spider-chart></spider-chart>
         </div>
         <div class="set-6">
-          <top10-list [data]="items" [color]="colors"></top10-list>
+          <top10-list [data]="items"></top10-list>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- <div class="set-3 col-lft">
-    <mat-card class="set-12 doc-description">
-      <div class="set-12 imghldr">
-        <mat-icon>panorama</mat-icon>
-        <img src="../../../assets/images/Rectangle 531.png" alt="" style="width: 100%;">
-      </div>
-      <div class="set-12 infohldr">
-        <p class="card-title">Documento madre 00</p>
-        <p class="card-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <span class="card-description link">Leer más</span>
-      </div>
-    </mat-card>
-    <div class="set-12" style="margin-top: 10px;">
-      <div class="horizontal-stats"></div>
-    </div>
-  </div> -->
-  <!-- <div class="set-3 inner-container">
-    <div class="spider-chart chart" ></div>
-  </div>
-
-  <div class="set-6 inner-container">
-    <div class="vertical-stats"></div>
-  </div>
-
-  <div class="set-6 inner-container">
-    <div class="top10-list"></div>
-  </div> -->
-  <!-- <top10-list></top10-list> -->
-  <!-- <vertical-stats-component ></vertical-stats-component> -->
-  <!-- <horizontal-stats-component></horizontal-stats-component> -->
 </div>
