--- a/src/app/public-documents/components/expanded-text/expanded-text.component.scss
+++ b/src/app/public-documents/components/expanded-text/expanded-text.component.scss
@@ -1,6 +1,6 @@
 .card-description {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 11pt;
     text-align: justify;
     color: #636363;
     margin-bottom: 8px;
