--- a/src/app/public-documents/components/solutions-card/solutions-card.component.scss
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.scss
@@ -1,12 +1,18 @@
 .solutions-box {
-  padding: 20px;
+  padding: 10px;
   .title {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
+  }
+  .title-column {
+    font-size: 12px;
+    font-weight: 400;
+    margin-right: 120px;
+    padding: 0;
   }
   table tbody tr td {
     p {
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 400;
       padding-bottom: 10px;
       margin-top: 10px;
