--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -162,7 +162,7 @@
     justify-content: center;
 
     .button-box {
-      width: 60px;
+      width: 80px;
       text-align: center;
       .add-button {
         color: white;
@@ -174,26 +174,28 @@
         background-color: #9747ff;
       }
       p {
-        font-size: 12px;
+        text-align: center;
+        font-size: 13px;
         font-weight: 500;
       }
     }
   }
 
-  .header-card {
+  .header-card{
     mat-card {
       padding: 0;
       display: flex;
-
+    
       .image-box {
-        width: 40%;
+        width: 35%;
         position: relative;
-
+        margin: 0;
+    
         img {
           width: 100%;
           height: 100%;
         }
-
+    
         .info {
           position: absolute;
           bottom: 0;
@@ -202,56 +204,61 @@
           justify-content: center;
           align-items: center;
           padding: 15pt 10pt;
-
+    
           .custom-circle {
-            width: 70pt;
-            height: 70pt;
+            width: 55pt;
+            height: 55pt;
             border-radius: 50%;
             border: 2px solid #fff;
             background-color: #ceddff;
             cursor: auto;
             margin: 0;
             margin-right: 20pt;
-
+    
             mat-icon {
               color: #306eff;
-              font-size: 24pt;
+              font-size: 22pt;
             }
           }
-
+    
           .actions {
             margin: 0;
             p {
-              font-size: 17pt;
+              font-size: 13pt;
               color: #fff;
               text-shadow: 0 0 4px #4b4b4b;
             }
-
+    
             button {
               width: 100%;
               margin-top: 8pt;
             }
+            
+            .votes{
+              font-size: 16pt;
+              font-weight: bold;
+            }
           }
         }
       }
-
+    
       .data-box {
         width: 60%;
-        padding: 30px;
-
+        padding: 30px 0px;
+    
         .title {
-          font-size: 16pt;
+          font-size: 14pt;
           text-transform: uppercase;
-          margin-bottom: 25pt;
+          margin-bottom: 12pt;
           font-weight: 600;
         }
-
+    
         .short-description {
           color: #636363;
-          font-size: 13pt;
+          font-size: 11pt;
           line-height: 19pt;
         }
-
+    
         .show-more {
           display: block;
           margin-top: 20pt;
@@ -260,6 +267,7 @@
         }
       }
     }
+    
   }
 }
 
