--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -13,86 +13,112 @@
     </div>
   </div>
 
-  <div class="set-12" style="padding-bottom: 100px;margin-top: 20px;" *ngIf="subcategory">
+  <div
+    class="set-12"
+    style="padding-bottom: 100px; margin-top: 20px"
+    *ngIf="subcategory"
+  >
     <div class="set-4 col-rgt-3">
       <mat-card class="doc-description">
         <div class="imghldr">
-          <img src="../../../assets/images/stand.png" alt="" style="width: 100%" />
+          <img
+            src="../../../assets/images/stand.png"
+            alt=""
+            style="width: 100%"
+          />
         </div>
         <div class="infohldr">
           <p class="card-title">{{ subcategory.category.name }}</p>
-          <expanded-text [text]="subcategory.description" [minLength]="200"></expanded-text>
+          <expanded-text
+            [text]="subcategory.description"
+            [minLength]="200"
+          ></expanded-text>
         </div>
       </mat-card>
     </div>
-    <div class="set-8">
-      <div class="main-box">
-        <panel-subcategory [data]="subcategory.topics" [selectedID]="subcategory._id"></panel-subcategory>
-        <div class="set-12 container-titles">
-          <div class="set-6 title">
-            <p>
-              Soluciones
-              <img src="../../../assets/images/row.png" alt="" width="22" />
-            </p>
-          </div>
-          <div class="set-6 title">
-            <p>
-              Problemas
-              <img src="../../../assets/images/alert.webp" alt="" width="20" />
-            </p>
-          </div>
+    <div class="set-8" style="background-color: white">
+      <panel-subcategory
+        [data]="subcategory.topics"
+        [selectedID]="subcategory._id"
+      ></panel-subcategory>
+      <div class="set-12 container-titles">
+        <div class="set-6 title">
+          <p>
+            Soluciones
+            <img src="../../../assets/images/row.png" alt="" width="22" />
+          </p>
         </div>
-        <div class="set-12">
-          <div class="set-6" style="min-height: 500px;">
-            <table mat-table [dataSource]="solutionsDataSource" class="mat-elevation-z8">
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                  <p style="font-weight: 500">{{ element.title }}</p>
-                </td>
-              </ng-container>
+        <div class="set-6 title">
+          <p>
+            Problemas
+            <img src="../../../assets/images/alert.webp" alt="" width="20" />
+          </p>
+        </div>
+      </div>
+      <div class="set-12 tables">
+        <div class="set-6">
+          <table
+            mat-table
+            [dataSource]="solutionsDataSource"
+            class="mat-elevation-z8"
+          >
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let element">
+                <p class="title">
+                  {{ element.title }}
+                </p>
+              </td>
+            </ng-container>
 
-              <ng-container matColumnDef="ranking">
-                <th mat-header-cell *matHeaderCellDef>Ranking</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ 0 }}
-                </td>
-              </ng-container>
+            <ng-container matColumnDef="ranking">
+              <th mat-header-cell *matHeaderCellDef>Ranking</th>
+              <td mat-cell *matCellDef="let element">
+                {{ 0 }}
+              </td>
+            </ng-container>
 
-              <ng-container matColumnDef="users">
-                <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-                <td mat-cell *matCellDef="let element">{{ 0 }}</td>
-              </ng-container>
+            <ng-container matColumnDef="users">
+              <th mat-header-cell *matHeaderCellDef>Usuarios</th>
+              <td mat-cell *matCellDef="let element">{{ 0 }}</td>
+            </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
-          </div>
-          <div class="set-6" style="min-height: 500px;">
-            <table mat-table [dataSource]="topicsDataSource" class="mat-elevation-z8">
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                  <a style="font-weight: 500;cursor:pointer;" (click)="redirect(element._id)">{{ element.title }}</a>
-                </td>
-              </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </div>
+        <div class="set-6">
+          <table
+            mat-table
+            [dataSource]="topicsDataSource"
+            class="mat-elevation-z8"
+          >
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let element">
+                <a
+                  style="font-weight: 500; cursor: pointer"
+                  (click)="redirect(element._id)"
+                  >{{ element.title }}</a
+                >
+              </td>
+            </ng-container>
 
-              <ng-container matColumnDef="ranking">
-                <th mat-header-cell *matHeaderCellDef>Ranking</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ 0 }}
-                </td>
-              </ng-container>
+            <ng-container matColumnDef="ranking">
+              <th mat-header-cell *matHeaderCellDef>Ranking</th>
+              <td mat-cell *matCellDef="let element">
+                {{ 0 }}
+              </td>
+            </ng-container>
 
-              <ng-container matColumnDef="users">
-                <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-                <td mat-cell *matCellDef="let element">{{ 0 }}</td>
-              </ng-container>
+            <ng-container matColumnDef="users">
+              <th mat-header-cell *matHeaderCellDef>Usuarios</th>
+              <td mat-cell *matCellDef="let element">{{ 0 }}</td>
+            </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
-          </div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
         </div>
       </div>
     </div>
