--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -7,12 +7,9 @@
     <div class="set-6">
       <breadcrumbs-component>
         <li>Documentos</li>
-        <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos/' + document._id)">
+        <li (click)="utilityService.linkMe('/documentos/' + document._id)">
           {{ document.title }}
         </li>
-        <ng-template #noTitle>
-          <div>categoria</div>
-        </ng-template>
         <li (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id)">
           {{ selectedCategory.category.name }}
         </li>
