--- a/src/styles.scss
+++ b/src/styles.scss
@@ -188,6 +188,7 @@ table {
   display: table;
   clear: both;
 }
+
 .col-rgt {
   padding-left: 30px;
 }
@@ -205,23 +206,23 @@ table {
 }
 
 
-.mt-1{
+.mt-1 {
   margin-top: 10px;
 }
 
-.mt-2{
+.mt-2 {
   margin-top: 20px;
 }
 
-.mt-3{
+.mt-3 {
   margin-top: 30px;
 }
 
-.mt-4{
+.mt-4 {
   margin-top: 40px;
 }
 
-.mt-5{
+.mt-5 {
   margin-top: 40px;
 }
 
@@ -513,6 +514,7 @@ mat-form-field {
     background-size: 100%;
   }
 }
+
 .shadow {
   box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
@@ -556,7 +558,8 @@ mat-form-field {
   }
 }
 
-.viewer-dialog {
+.viewer-dialog,
+.full-dialog {
   height: 100%;
   right: 0;
   overflow: auto;
@@ -605,5 +608,15 @@ mat-form-field {
     position: absolute;
     top: 0;
     left: 75%;
+  }
+}
+
+.full-dialog {
+  width: 100% !important;
+  max-width: 100vw !important;
+
+  .mat-dialog-container {
+    padding: 0;
+    background: #e5e5e5;
   }
 }
