--- a/src/app/components/add-document-solution/add-document-solution.component.html
+++ b/src/app/components/add-document-solution/add-document-solution.component.html
@@ -3,59 +3,11 @@
     <h3>Agregar Solución</h3>
   </div>
   <div class="set-3 txt-right">
-    <button
-      type="button"
-      mat-icon-button
-      color="primary"
-      (click)="killDialog()"
-    >
+    <button type="button" mat-icon-button color="primary" (click)="killDialog()">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
 </div>
-
-<!--div class="set-12 dialog-body">
-  <form [formGroup]="addSolutionFormGroup" (submit)="onCreateSolution(addSolutionFormGroup)">
-    <div class="form-body">
-      <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Escribe una descripción o carga un documento</mat-label>
-        <textarea matInput placeholder="Descripción" formControlName="description"></textarea>
-      </mat-form-field>
-
-      <div class="imagebox">
-        <label [ngClass]="imageUrl ? 'data' : 'empty'">
-          <mat-icon>photo_camera</mat-icon>
-          <span>Subir imagen</span>
-          <input
-            type="file"
-            accept="image/*"
-            (change)="handleSelectImage($event)"
-            formControlName="image"
-          />
-        </label>
-
-        <img
-          class="preview"
-          [src]="imageUrl"
-          alt="img_upload"
-          [ngClass]="imageUrl ? 'data' : 'empty'"
-        />
-      </div>
-    </div>
-
-    <div class="set-12 ctrls">
-      <button
-        type="submit"
-        mat-raised-button
-        color="primary"
-        [disabled]="addSolutionFormGroup.invalid"
-        class="submit-button"
-      >
-        Agregar solución
-      </button>
-    </div>
-  </form>
-</div-->
 
 <div class="set-12 step-content">
   <form [formGroup]="addSolutionFormGroup" (submit)="onCreateSolution(addSolutionFormGroup)">
@@ -92,5 +44,5 @@
     <p *ngFor="let name of fileNames">
       <small>{{name}}</small>
     </p>
-  </div>  
+  </div>
 </div>
