--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -61,10 +61,10 @@
             </div>
           </div>
           <p class="card-description" *ngIf="selectedCategory.description != null">{{selectedCategory.description}}</p>
-          <button type="button" class="toolbtn" *ngIf="selectedCategory.description == null"
+          <!-- <button type="button" class="toolbtn" *ngIf="selectedCategory.description == null"
             (click)="popEditCategoryDialog()">
             <small>Agregar descripción</small>
-          </button>
+          </button> -->
           <avatars-row [users]="collaborators"></avatars-row>
         </div>
       </mat-card>
@@ -156,7 +156,7 @@
         </mat-card>
       </div>
 
-      <div class="set-12 empty-subs category-list" *ngIf="subcategories.length == 0">
+      <!-- <div class="set-12 empty-subs category-list" *ngIf="subcategories.length == 0">
         <mat-card class="set-12">
           <div class="set-12 txt-center">
             <p>
@@ -172,12 +172,21 @@
             </button>
           </div>
         </mat-card>
-      </div>
+      </div> -->
 
-      <div class="set-12 category-list" *ngIf="subcategories.length != 0">
-        <mat-card>
-          <p class="title">Sub Categorías</p>
-          <table mat-table [dataSource]="dataSource" class="categories-table">
+      <div class="set-12 category-list">
+        <mat-card class="set-12">
+          <div class="set-12 table-head">
+            <p class="title">Sub Categorías</p>
+            <input type="text" (keyup)="applyFilter($event)" placeholder="Búscar en sub categorías..."
+              [disabled]="subcategories.length == 0">
+          </div>
+
+          <div class="set-12 empty-layouts" *ngIf="subcategories.length == 0">
+            <p>Sin sub categorías disponibles.</p>
+          </div>
+
+          <table mat-table [dataSource]="dataSource" class="categories-table" *ngIf="subcategories.length != 0">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Título</th>
               <td mat-cell *matCellDef="let element">
