--- a/src/app/documents/single-document/single-document.component.scss
+++ b/src/app/documents/single-document/single-document.component.scss
@@ -194,7 +194,10 @@
       letter-spacing: 2pt;
     }
 
-    /* CATEGORIES TABLE */
+    .empty-layouts {
+      margin-top: 40px;
+    }
+
     .categories-table {
       th.mat-header-cell:first-of-type {
         padding: 0 !important;
@@ -236,13 +239,19 @@
 
     input[type="text"] {
       padding: 15px;
-      border: 1px solid rgba($color: #000000, $alpha: 0.1);
+      // border: 1px solid rgba($color: #000000, $alpha: 0.1);
+      box-shadow: inset 0 0 0 1px rgba($color: #000000, $alpha: 0.1);
       border-radius: 5px;
       width: 100%;
     }
 
     input[type="text"]:focus {
       box-shadow: inset 0 0 0 2px #306EFF;
+    }
+
+    input[type="text"]:disabled {
+      cursor: not-allowed;
+      opacity: 0.7;
     }
   }
 
