--- a/src/app/documents/single-subcategory/single-subcategory.component.scss
+++ b/src/app/documents/single-subcategory/single-subcategory.component.scss
@@ -232,11 +232,27 @@
     }
   }
 
-  .item-card{
-    padding: 10px;
+  .item-card {
+    display: flex;
+
+    .set-6 {
+      flex: 1;
+
+      mat-card {
+        height: 100%;
+      }
+    }
+
+    .set-6:nth-child(odd) {
+      padding-right: 10px;
+    }
+
+    .set-6:nth-child(even) {
+      padding-left: 10px;
+    }
   }
-  
-  .roundgreen{
+
+  .roundgreen {
     background-color: #20C588
   }
 }
