--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -13,7 +13,8 @@
         <li (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + category._id)">
           {{ category.category.name }}
         </li>
-        <li (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + category._id + '/subcategoria/' + subcategory._id)">
+        <li
+          (click)="utilityService.linkMe('/documentos/' + document._id + '/categoria/' + category._id + '/subcategoria/' + subcategory._id)">
           {{ subcategory.category.name }}
         </li>
         <li>{{ topic.title }}</li>
@@ -118,7 +119,7 @@
       <mat-card class="set-12 topic-list">
         <p class="title">Soluciones</p>
 
-        <table mat-table [dataSource]="solutions" class="problems-table">
+        <table mat-table [dataSource]="dataSource" class="problems-table">
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
