--- a/src/app/components/image-viewer/image-viewer.component.html
+++ b/src/app/components/image-viewer/image-viewer.component.html
@@ -5,7 +5,9 @@
 
 <div class="set-12 dialog-viewer" *ngIf="isDataAvailable">
   <input type="file" #file (change)="onFileSelected($event)" multiple>
-  <div class="viewer-display">
+
+  <!-- document viewer -->
+  <div class="viewer-display" *ngIf="dialogData.location == 'document'">
     <div class="set-12 txt-center" *ngIf="document.images.length == 0">
       <button type="button" (click)="file.click()" [disabled]="submitted">
         <mat-icon>add_a_photo</mat-icon>
@@ -15,6 +17,19 @@
       <p class="txt-center" *ngIf="submitted">Cargando...</p>
     </div>
     <slider-images [images]="document.images" [document]="document" *ngIf="document.images != 0"></slider-images>
+  </div>
+
+  <!-- layout  viewer -->
+  <div class="viewer-display" *ngIf="dialogData.location == 'layout'">
+    <div class="set-12 txt-center" *ngIf="layout.images.length == 0">
+      <button type="button" (click)="file.click()" [disabled]="submitted">
+        <mat-icon>add_a_photo</mat-icon>
+        <p>Cargar imágenes</p>
+      </button>
+      <mat-spinner color="accent" diameter="70" *ngIf="submitted"></mat-spinner>
+      <p class="txt-center" *ngIf="submitted">Cargando...</p>
+    </div>
+    <slider-images [images]="layout.images" [layout]="layout" *ngIf="layout.images != 0"></slider-images>
   </div>
 </div>
 
